Menu is now fixed except on small screens

--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -72,6 +72,10 @@ dt {
 	min-width: 65px;
 }
 
+#menu {
+	position: fixed;
+}
+
 #menu li {
 	margin-bottom: 5px;
 }
@@ -83,7 +87,7 @@ dt {
 	background: lightgrey;
 }
 
-.container > *:not(#menu):not(#factsheet)  {
+.container > *:not(#dummy-menu):not(#factsheet) {
     float: right !important;
 }
 
@@ -109,7 +113,11 @@ footer {
 	@media only screen and (min-width: 768px) and (max-width: 959px) {}
 
 	/* All Mobile Sizes (devices and browser) */
-	@media only screen and (max-width: 767px) {}
+	@media only screen and (max-width: 767px) {
+		#menu {
+			position: inherit;
+		}
+	}
 
 	/* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
 	@media only screen and (min-width: 480px) and (max-width: 767px) {}
